--- a/projects/client/src/app/components/header/header.component.html
+++ b/projects/client/src/app/components/header/header.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/dashboard">Around Noon</a>
+    <a class="navbar-brand" routerLink="/dashboard">
+      <i class="bi bi-hexagon-fill"></i> OPTIROUTE
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,6 +13,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/driver-forms" routerLinkActive="active">My Forms</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/store-library" routerLinkActive="active">Store Library</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="ordersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
